--- a/final project/views/tasklist.ejs
+++ b/final project/views/tasklist.ejs
@@ -29,7 +29,7 @@
         <td><%=e.task%></td>
    
       
-<td><a href="/delete?id=<%=e.id%>"><button><button>Delete</a>
+<td><button><a href="/delete?id=<%=e.id%>">Delete</button></a>
         </td>
       </tr>
     <%})%>
